vac-rs/crates/surfaces/tui/src/snapshots/vac_tui__app__tests__clear_ui_after_long_transcript_fresh_header_only.snap
---
source: crates/surfaces/tui/src/app/tests.rs.inc
assertion_line: 3740
expression: rendered
---
● ● ●     vac · interactive   first launch 


hydrating startup snapshot ─
╭Vastar Agentic CLI──────────────────╮╭Runtime─────────────────────────────╮
│●  version        <VERSION> control-││●  runtime        host      in-proce│
│●  provider       default   runtime ││●  isolation      policy    executio│
│●  model          gpt-test  runtime ││●  autopilot      runtime   schedule│
│●  fallback       configure loaded f││●  mcp            runtime   configur│
│●  profile        runtime   tool pol││●  sessions       runtime   history │
│●  rulebook       runtime   control-││●  workspace      registry  inventor│
│●  reasoning      high      active e││                                    │
│                                    ││                                    │
│                                    ││                                    │
│                                    ││                                    │
│                                    ││                                    │
│                                    ││                                    │
│                                    ││                                    │
│                                    ││                                    │
│                                    ││                                    │
│                                    ││                                    │
│                                    ││                                    │
╰────────────────────────────────────╯╰────────────────────────────────────╯
ready
 VAC           type / for commands, /help to explore, or start typing a task
recent   no recent task loaded


 INPUT  │ model claude-sonnet-4.5 │ 0 tok │ manual │ valid 100% │ profile ru
